fix: trigger lanbel overflow

--- a/talos/src/component/search/search.module.scss
+++ b/talos/src/component/search/search.module.scss
@@ -108,6 +108,11 @@
         margin-bottom: 0;
         .searchForm > .searchInputWrapper {
             border-radius: 1.5rem;
+            transition: all 0.3s;
+            &:has(.searchInput:not(:placeholder-shown)) {
+                box-shadow:
+                    inset 0 0 0 2px var(--search-outline)
+            }
             .searchIcon {
                 left: 0.9rem;
             }
