--- a/talos/src/component/sideBar/sideBar.mobile.module.scss
+++ b/talos/src/component/sideBar/sideBar.mobile.module.scss
@@ -67,13 +67,13 @@
     --drawer-backdrop-bg: #{rgba($white-1, 0.6)};
     --drawing-handle-bg: #{rgba($primary-accent-4, 0.9)};
     --divider-bg: #{rgba($black-1, 0.5)};
-    --drawer-backdrop-bg: #{rgba($white-0, 0.2)};
+    --drawer-backdrop-bg: #{rgba($white-0, 0.4)};
 }
 :root[data-theme='dark'] {
     --drawer-backdrop-bg: #{rgba($black-1, 0.6)};
     --drawing-handle-bg: #{rgba($primary-accent-4, 0.9)};
     --divider-bg: #{rgba($light-2, 0.5)};
-    --drawer-backdrop-bg: #{rgba($mid, 0.2)};
+    --drawer-backdrop-bg: #{rgba($mid, 0.4)};
 }
 .mobileDrawer {
     pointer-events: auto;
